--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -179,9 +179,9 @@
                   <div class="mb-5">
                     <h3>Quick Links</h3>
                     <ul class="list-unstyled">
-                      <li><a href="#">About Us</a></li>
-                      <li><a href="#">Categories</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="{% url 'home' %}">About Us</a></li>
+                      <!-- <li><a href="#">Categories</a></li> -->
+                      <li><a href="{% url 'contact' %}">Contact</a></li>
                     </ul>
                   </div>
                   
