--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -14,7 +14,7 @@
         <a href="{% url 'profile' post.author.username %}">{{post.author.get_full_name}}</a></span
       >&bullet;
       <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span>
-      {% if request.session.user_id %}
+      {% if request.session.user_id == post.author.id %}
         <span class="ml-2"><a href="{% url 'update_post' post.slug %}">Edit</a></span>
         <span class="ml-2"><a id="delBtn" style="color: red;cursor: pointer;">Delete</a></span>
       {% endif %}
@@ -204,7 +204,7 @@
     $("#delBtn").click(function(e){
       Swal.fire({
       title: 'Sure ?',
-      text: 'Do you want to continue ?',
+      // text: 'Do you want to continue ?',
       type: 'warning',
       showCancelButton: true,
       confirmButtonText: `<a href="{% url 'delete_post' post.slug %}" style="color: white;">Yeah!</a>`
