--- a/templates/core/tag.html
+++ b/templates/core/tag.html
@@ -38,21 +38,29 @@
               </div>
             </div>
 
+            {% if pagination %}
+              
             <div class="row mt-5">
               <div class="col-md-12 text-center">
                 <nav aria-label="Page navigation" class="text-center">
                   <ul class="pagination">
-                    <li class="page-item  active"><a class="page-link" href="#">&lt;</a></li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                    <li class="page-item"><a class="page-link" href="#">5</a></li>
-                    <li class="page-item"><a class="page-link" href="#">&gt;</a></li>
+                    {% if posts.has_previous %}
+                        <li class="page-item"><a class="page-link" href="?page={{posts.previous_page_number}}">&lt;</a></li>
+                      {% else %}
+                        <li class="page-item"><a class="page-link" style="pointer-events: none;" aria-disabled="true">&lt;</a></li>
+                      {% endif %}
+                        <li class="page-item"><a class="page-link active" href="">{{posts.number}}</a></li>
+                      {% if posts.has_next %}
+                        <li class="page-item"><a class="page-link" href="?page={{posts.next_page_number}}">&gt;</a></li>
+                      {% else %}
+                        <li class="page-item"><a class="page-link" style="pointer-events: none;">&gt;</a></li>
+                      {% endif %}
                   </ul>
                 </nav>
               </div>
             </div>
+            
+            {% endif %}
 
             
 
