--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -6,10 +6,17 @@
 {% block content %}
 <section class="site-section pt-5" style="margin-top: 30px;">
       <div class="container" >
-  <div class="bio text-center">
+              <div class="bio text-center">
                 <img src="{{user.profile_image.url}}" alt="Image Placeholder" class="img-fluid">
                 <div class="bio-body">
-                  <h2>{{user.get_full_name}} <a href="{% url 'edit_profile' user.username %}"><i class="fa fa-pencil-square-o ml-2" aria-hidden="true" style="color: black;"></i></a></h2>
+                  <h2>
+                    {{user.get_full_name}} 
+                    {% if request.session.user_id == user.id %}
+
+                    <a href="{% url 'edit_profile' user.username %}"><i class="fa fa-pencil-square-o ml-2" aria-hidden="true" style="color: black;"></i></a>
+
+                    {% endif %}
+                  </h2>
                   <p>{{user.about}}</p>
                   
                   <p class="social">
@@ -19,34 +26,62 @@
                   </p>
                 </div>
               </div>
+              <div class="row blog-entries">
+                <div class="col-md-12 main-content">
               {% if latest_posts|length > 0 %}
                 
-            
-              <div class="row mb-5 mt-5 ">
-              <div class="col-md-12 mb-5">
-                <h2>Latest Posts</h2>
-              </div>
-              <div class="col-md-12">
-                {% for post in latest_posts %}
-                  
-                <div class="post-entry-horzontal">
-                  <a href="{% url 'single' post.slug %}">
-                    <div class="image" style="background-image: url({{post.thumbnail.url}});"></div>
-                    <span class="text">
-                      <div class="post-meta">
-                        <span class="mr-2">March 15, 2018 </span>
-                      </div>
-                      <h2>{{post.title}}</h2>
-                    </span>
-                  </a>
+                <div class="row mb-5 mt-5 ">
+                <div class="col-md-12 mb-5">
+                  <h2>Latest Posts</h2>
                 </div>
-                <!-- END post -->
-                {% endfor %}
+                <div class="col-md-12">
+                  {% for post in latest_posts %}
+                    
+                  <div class="post-entry-horzontal">
+                    <a href="{% url 'single' post.slug %}">
+                      <div class="image" style="background-image: url({{post.thumbnail.url}});"></div>
+                      <span class="text">
+                        <div class="post-meta">
+                          <span class="mr-2">{{post.timestamp|date:"F d Y"}}</span>&bullet;
+                          <span class="mr-2">{{post.categories.name}}</span>
+                        </div>
+                        <h2>{{post.title}}</h2>
+                      </span>
+                    </a>
+                  </div>
+                  <!-- END post -->
+                  {% endfor %}
 
+                </div>
+                </div>
+            
+              {% endif %}
+              {% if pagination %}
+              
+            <div class="row mt-5">
+              <div class="col-md-12 text-center">
+                <nav aria-label="Page navigation" class="text-center">
+                  <ul class="pagination">
+                    {% if latest_posts.has_previous %}
+                        <li class="page-item"><a class="page-link" href="?page={{latest_posts.previous_page_number}}">&lt;</a></li>
+                      {% else %}
+                        <li class="page-item"><a class="page-link" style="pointer-events: none;" aria-disabled="true">&lt;</a></li>
+                      {% endif %}
+                        <li class="page-item"><a class="page-link active" href="">{{latest_posts.number}}</a></li>
+                      {% if latest_posts.has_next %}
+                        <li class="page-item"><a class="page-link" href="?page={{latest_posts.next_page_number}}">&gt;</a></li>
+                      {% else %}
+                        <li class="page-item"><a class="page-link" style="pointer-events: none;">&gt;</a></li>
+                      {% endif %}
+                  </ul>
+                </nav>
               </div>
             </div>
             
-              {% endif %}
+            {% endif %}
+              </div>
+            </div>
+              
           </div>
           </section>
 {% endblock content %}
