--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -35,7 +35,8 @@
             <div class="text">
               <h4>{{post.title}}</h4>
               <div class="post-meta">
-                <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span>
+                <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span>&bullet;
+                <span class="mr-2">{{post.categories.name}}</span>
               </div>
             </div>
           </a>
