--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -97,7 +97,7 @@
 <script type="text/javascript" src="{% static 'ckeditor/ckeditor/ckeditor.js' %}"></script>
 <script>
     CKEDITOR.replace('editor1', {
-      
+      height: 500
     });
   </script>
   <script>
