Fix logo in emails

--- a/templates/emails/email.html
+++ b/templates/emails/email.html
@@ -84,7 +84,8 @@
                                   "
                                   ><img
                                     src="https://i.imgur.com/K8P5WhV.png"
-                                    width="498"
+                                    width="150"
+                                    height="150"
                                     style="
                                       margin-left: 0px;
                                       margin-top: 0px;
