Fix Update Post

--- a/templates/core/update-post.html
+++ b/templates/core/update-post.html
@@ -30,7 +30,7 @@
                         <div class="col-md-12 form-group">
                             <label for="banner">Banner</label>
                             <img src="{{post.thumbnail.url}}" alt="Image" class="img-fluid mb-5" id="bannerImage" />
-                            <input id="imageUpload" type="file" name="banner_image" placeholder="Photo" capture required>
+                            <input id="imageUpload" type="file" name="banner_image" placeholder="Photo" capture>
                         </div>
                         <div class="col-md-12 form-group">
                             <label for="content">Overview <small>(For SEO Preview)</small> </label>
