--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -5,6 +5,13 @@
     <title>{% block title %}{% endblock title %} | iRead</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="iRead is an open platform where readers find dynamic thinking, and where expert and undiscovered voices can share their writing on any topic.">
+    <meta property="og:title" content="iRead | Where Dynamic Ideas Find You">
+    <meta property="og:description" content="iRead is an open platform where readers find dynamic thinking, and where expert and undiscovered voices can share their writing on any topic.">
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="iRead">
+    <meta property="og:image" content="{% static 'images/favicon.png' %}">
+    <meta property="og:image:type" content="image/jpg" />
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300, 400,700|Inconsolata:400,700" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
