Fix Overview box

--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -34,7 +34,7 @@
                         </div>
                         <div class="col-md-12 form-group">
                             <label for="content">Overview <small>(For SEO Preview)</small> </label>
-                            <textarea cols="80" id="overview" name="overview" rows="3" required></textarea>
+                            <textarea cols="80" id="overview" name="overview" rows="3" style="max-width: 100%;" required></textarea>
                         </div>
                         <div class="col-md-12 form-group">
                             <label for="content">Content</label>
