Fix Cloudinary Uploads

--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -109,12 +109,12 @@
     var element = document.getElementById("new_post")
     element.classList.add("active");
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <script>
     Swal.fire(
     'Storage Issue',
     'Currently, we <strong>do not support adding images in post content</strong> due to low storage.',
     'info'
     )
-  </script>
+  </script> -->
 {% endblock js_down %}
