--- a/templates/core/update-post.html
+++ b/templates/core/update-post.html
@@ -88,13 +88,13 @@
       filebrowserUploadUrl: '{% url "ckeditor_upload" %}'
     });
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
   <script>
     Swal.fire(
     'Storage Issue',
     'Currently, we <strong>do not support adding images in post content</strong> due to low storage.',
     'info'
     )
-  </script>
+  </script> -->
 
 {% endblock js_down %}
