--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -49,7 +49,7 @@
   <!-- END sidebar-box -->
 
   <div class="sidebar-box">
-    <h3 class="heading">Categories</h3>
+    <h3 class="heading">Categories<a id="new_cat" style="cursor: pointer;"><i class="fa fa-plus" style="float: right;" aria-hidden="true"></i></a></h3>
     <ul class="categories">
       {% for category in categories %}
 
@@ -65,7 +65,7 @@
   <!-- END sidebar-box -->
 
   <div class="sidebar-box">
-    <h3 class="heading">Tags</h3>
+    <h3 class="heading">Tags<a id="new_tag" style="cursor: pointer;"><i class="fa fa-plus" style="float: right;" aria-hidden="true"></i></a></h3>
     <ul class="tags">
       {% for tag in tags %}
 
@@ -76,3 +76,5 @@
   </div>
 </div>
 <!-- END sidebar -->
+
+<script src="{% static 'js/sidebar.js' %}"></script>
