--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -6,11 +6,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="iRead is an open platform where readers find dynamic thinking, and where expert and undiscovered voices can share their writing on any topic.">
-    <meta property="og:title" content="iRead | Where Dynamic Ideas Find You">
-    <meta property="og:description" content="iRead is an open platform where readers find dynamic thinking, and where expert and undiscovered voices can share their writing on any topic.">
+    {% if meta %}
+      <meta property="og:title" content="{{post.title}} | iRead">
+      <meta property="og:description" content="{{post.seo_overview}}">
+      <meta property="og:image" content="{{post.thumbnail.url}}">
+    {% else %}
+      <meta property="og:title" content="iRead | Where Dynamic Ideas Find You">
+      <meta property="og:description" content="iRead is an open platform where readers find dynamic thinking, and where expert and undiscovered voices can share their writing on any topic.">
+      <meta property="og:image" content="{% static 'images/favicon.png' %}">
+    {% endif %}
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="iRead">
-    <meta property="og:image" content="{% static 'images/favicon.png' %}">
     <meta property="og:image:type" content="image/jpg" />
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300, 400,700|Inconsolata:400,700" rel="stylesheet">
