--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -36,6 +36,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script data-ad-client="ca-pub-8354103933180400" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
    
     <style>
     .separator {
