--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -57,6 +57,10 @@
                                 {% endfor %}
                             </select>
                         </div>
+                        <div class="col-md-6 form-group">
+                            <input type="checkbox" id="published" name="published" value="True">
+                            <label for="published"> Published</label><br>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4"></div>
