--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,24 +1,12 @@
 {% load static %}
 
 <div class="col-md-12 col-lg-4 sidebar mt-4">
-  <!-- END sidebar-box -->
-  <!-- <div class="sidebar-box" style="margin-top: 140px;">
-              <div class="bio text-center">
-                <img src="{% static 'images/circle-cropped.png' %}" alt="Image Placeholder" class="img-fluid">
-                <div class="bio-body">
-                  <h2>Ashutosh Krishna</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem facilis sunt repellendus excepturi beatae porro debitis voluptate nulla quo veniam fuga sit molestias minus.</p>
-                  <p><a href="{% url 'about' %}" class="btn btn-primary btn-sm rounded">Read my bio</a></p>
-                  <p class="social">
-                    <a href="{{links.facebook}}" class="p-2"><span class="fa fa-facebook"></span></a>
-                    <a href="{{links.twitter}}" class="p-2"><span class="fa fa-twitter"></span></a>
-                    <a href="{{links.instagram}}" class="p-2"><span class="fa fa-instagram"></span></a>
-                    <a href="{{links.portfolio}}" class="p-2"><span class="fa fa-globe"></span></a>
-                  </p>
-                </div>
-              </div>
-            </div> -->
-  <!-- END sidebar-box -->
+  <!-- Author May Come Here -->
+
+  {% if 'posts' in request.path %}
+    {% include "partials/author.html" %}
+  {% endif %}
+
   <div class="sidebar-box">
     <h3 class="heading">Popular Posts</h3>
     <div class="post-entry-sidebar">
