--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -74,7 +74,9 @@
                     </div>
                   </div>
                 </form>
-            
+                <h4 style="margin-top: 50px;">
+                  Or Contact Us Directly : <a href="mailto:contact@iread.ga">contact@iread.ga</a>
+                </h4>
 
           </div>
           {% include "partials/sidebar.html" %}
