--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -485,7 +485,7 @@
                   Swal.fire({
                     icon: 'success',
                     title: 'Subscribed',
-                    text: `We'll send you <strong>${data.category}</strong> related bulletins ${data.recurring.toLowerCase()}`,
+                    html: `We'll send you <strong>${data.category}</strong> related bulletins ${data.recurring.toLowerCase()}`,
                     footer: 'This feature will roll out soon.'
                   })
                 } else {
