Add Change Password for Authenticated Users

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -189,6 +189,11 @@
                       href="{% url 'profile' request.session.username %}"
                       >View Profile</a
                     >
+                    <a
+                      class="dropdown-item"
+                      href="{% url 'change_password' %}"
+                      >Change Password</a
+                    >
                     <a class="dropdown-item" href="{% url 'logout' %}"
                       >Log Out</a
                     >
