Add Post Views in single post

--- a/templates/partials/like.html
+++ b/templates/partials/like.html
@@ -25,3 +25,10 @@
   ></a>
   {% endif %}
 </button>
+<i
+  class="fa fa-eye"
+  aria-hidden="true"
+  style="color: black"
+  id="like_dislike"
+  > {{post.views}}</i
+  >
