--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -103,7 +103,7 @@
 <script>
     CKEDITOR.replace('editor1', {
       height: 500,
-      extraPlugins: 'filebrowser',
+      extraPlugins: 'filebrowser, codesnippet',
       filebrowserBrowseUrl: '{% url "ckeditor_browse" %}',
       filebrowserUploadMethod: 'form',
       filebrowserUploadUrl: '{% url "ckeditor_upload" %}'
