--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -324,6 +324,9 @@
                         <a class="bulletin" style="color:white;cursor: pointer">Bulletins</a>
                       </li>
                       <li><a href="{% url 'dashboard' %}">Sponsor</a></li>
+                      <li><a href="{% url 'privacy_policy' %}">Privacy Policy</a></li>
+                      <li><a href="{% url 'terms_conditions' %}">T&C</a></li>
+                      <li><a href="{% url 'refund_policy' %}">Refund Policy</a></li>
                     </ul>
                   </div>
 
