--- a/templates/payment/paytm/paytm.html
+++ b/templates/payment/paytm/paytm.html
@@ -151,8 +151,8 @@
 
   <body>
     <div id="loading-wrapper">
-      <div id="loading-text">REDIRECTING</div>
-      <div id="loading-content">DO NOT REFRESH</div>
+      <div id="loading-text">LOADING</div>
+      <div id="loading-content"></div>
     </div>
 
     <form
