--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -73,6 +73,9 @@
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
     ></script>
+    {% block js_up %}
+      
+    {% endblock js_up %}
 
     <style>
       .separator {
